all changes before implement auth