@@ -9,7 +9,6 @@ import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -19,42 +18,42 @@ public class EnumService implements IEnumService {
     public List<String> getCategoryTypes() {
         return Arrays.stream(CategoryType.values())
                 .map(Enum::name)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     public List<String> getGenderTypes() {
         return Arrays.stream(GenderType.values())
                 .map(Enum::name)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     public List<String> getMatchStatuses() {
         return Arrays.stream(MatchStatus.values())
                 .map(Enum::name)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     public List<String> getTournamentStatuses() {
         return Arrays.stream(TournamentStatus.values())
                 .map(Enum::name)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     public List<String> getTournamentTypes() {
         return Arrays.stream(TournamentType.values())
                 .map(Enum::name)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     public List<String> getWinningMatchRuleTypes() {
         return Arrays.stream(WinningMatchRuleType.values())
                 .map(Enum::name)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -73,42 +72,42 @@ public class EnumService implements IEnumService {
     public List<Map<String, String>> getCategoryTypesWithInfo() {
         return Arrays.stream(CategoryType.values())
                 .map(this::createEnumInfo)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     public List<Map<String, String>> getGenderTypesWithInfo() {
         return Arrays.stream(GenderType.values())
                 .map(this::createEnumInfo)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     public List<Map<String, String>> getMatchStatusesWithInfo() {
         return Arrays.stream(MatchStatus.values())
                 .map(this::createEnumInfo)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     public List<Map<String, String>> getTournamentStatusesWithInfo() {
         return Arrays.stream(TournamentStatus.values())
                 .map(this::createEnumInfo)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     public List<Map<String, String>> getTournamentTypesWithInfo() {
         return Arrays.stream(TournamentType.values())
                 .map(this::createEnumInfo)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     public List<Map<String, String>> getWinningMatchRuleTypesWithInfo() {
         return Arrays.stream(WinningMatchRuleType.values())
                 .map(this::createEnumInfo)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private Map<String, String> createEnumInfo(Enum<?> enumValue) {
